# hrd_tools

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  batch.job  noxfile.py  pixi.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
design_scripts/: concentricity.py  effective_angle.py  hello_world.py  location_ui.py  location_ui2.py
design_scripts/CDR/: sphere_det.py
design_scripts/FDR/: README.md  _fdr_params.py  beamline_params.yaml  chi_sensativity.py  concentricity.py  corrections_scales.py  crystal_footprint.py  crystal_t_sensativity.py  data_rates.py  delta_L_angle.py  det_rates.py  detector_distance.py  detector_layout.py  diff_roll.py  gague_volume.py  geometric_strip.py  guage_crosssection.py  inherent_correction_error.py  live_data_validation.py  live_data_varidation.py  mac_sensitivity.py  min_crystal_distance.py  off_center.py  phi_coverage.py  phi_coverage2.py  real_data.py  rois_11bm.yaml  scan_coverage.py  theta_d_sensativity.py  velocity_stability.py
docs/: conf.py  index.md
examples/: divergence.ipynb  effective_angle.py  geometric_strip.py  hrd_glow.py  scratch.org  sphere_det.py  xrt_development.py
sims/: divergence.ipynb  ingest_runs.py  jupytext.toml
sims/hello_world/: generate_configs.py  hello.py  reduce.py  runner.py
sims/run/: .gitignore  batch.job  generate_configs.py  run_sims.py
src/bad_tools/: config.py  file_io.py  sim_reduction.py
src/bad_tools/xrt/: __init__.py  endstation.py  sources.py  stops.py
src/hrd_tools/: __init__.py  config.py  detector_stats.py  file_io.py  sensitivity.py  sim.py  sim_reduction.py  sim_report.py
src/hrd_tools/tiled/: __init__.py  cli.py  rewrite.py  walker.py
src/hrd_tools/xrt/: __init__.py  endstation.py  endstation_canonical.py  hemisphere.py  sources.py
tests/: test_fdr_params.py  test_fdr_scripts_smoke.py  test_package.py  test_tiled_v3.py
tiled/: .gitignore  config.yml  custom.py  register_helper.py
xrt_sim_runner/: batch.job  generate_configs.py  ingest_runs.py  runner.py  runner2.py
