[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "hrd_tools"
authors = [{ name = "Thomas A Caswell", email = "tcaswell@bnl.gov" }]
description = "Tools for the HRD beamline as part of NEXT-III at NSLS-II."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = []
dev = []
docs = []
reduction = []
shell = ["xontrib-jedi", "xontrib-vox"]

[project.urls]
Homepage = "https://github.com/tacaswell/hrd_tools"
"Bug Tracker" = "https://github.com/tacaswell/hrd_tools/issues"
Discussions = "https://github.com/tacaswell/hrd_tools/discussions"
Changelog = "https://github.com/tacaswell/hrd_tools/releases"


[tool.setuptools_scm]
write_to = "src/hrd_tools/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.coverage]
run.source = ["hrd_tools"]
port.exclude_lines = ['pragma: no cover', '\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = false
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hrd_tools.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["ophyd.*"]
ignore_missing_imports = true


[tool.ruff]
src = ["src"]
exclude = []
# Uncomment if using a _compat.typing backport
# typing-modules = ["hrd_tools._compat.typing"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",   # flake8
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long, trust the formatter to get it right
  "ISC001", # implicit concat, can be handy
  # QA for wrong opinions
  "RET504",  # can use a 'redundent' local if you want
  "RET505",  # return in else (clearer with the `else`)
  "SIM105",  # contextlib.suppress rather than try...except (just use language)
  "SIM108",  # ternaries are not actually clearer (just fewer lines)
  "PTH123",  # Path.open vs open (using the builtin is fine)
  "PIE804",  # creating dict to ** it is fine
  "C408",    # using dict() is fine
  "NPY002",  # allow the old numpy random generator
  "PD901",   # df is a fine variable name
  "EM102",   # use an fstring in an exception if you want
  "EM101",   # use strings in exceptions if you want
  "PLC2401", # greek letters in code is fine
  "E741",    # I is sensible varibale name in this domian
  "PLC0415", # buried imports are fine
]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
